# agv_web_gateway

./: CMakeLists.txt  README.md
config/: requestname2cmd.ini
include/: SimpleIni.h  agv_web_gateway.h  client.h  log.h  periodic_task.h
src/: agv_web_gateway.cpp  client.cpp  main.cpp
web/: app.js  index.html  style.css
